# opencv

./: CMakeLists.txt
android/package/: CMakeLists.txt
android/scripts/: cmake_android_ffmpeg.sh  cmake_android_video.sh
cmake/: OpenCVFindLibsVideo.cmake
cmake/templates/: OpenCV.mk.in  OpenCVConfig.cmake.in  cvconfig.h.cmake
modules/androidcamera/src/: camera_activity.cpp
modules/androidvideo/: CMakeLists.txt
modules/androidvideo/include/: video_connector.hpp
modules/androidvideo/src/: video_connector.cpp
modules/androidvideo/videowrapper/: CMakeLists.txt  android_video_wrapper.cpp  video_wrapper.cpp
modules/core/src/: system.cpp
modules/highgui/: CMakeLists.txt
modules/highgui/include/opencv2/highgui/: highgui.hpp
modules/highgui/perf/: perf_output.cpp
modules/highgui/src/: cap.cpp  cap_android_video.cpp  cap_android_video_capture.cpp  cap_ffmpeg.cpp  cap_ffmpeg_impl.hpp  cap_msmf.cpp  precomp.hpp
modules/highgui/test/: test_precomp.hpp
modules/java/: CMakeLists.txt
modules/java/generator/: gen_java.py
modules/ocl/include/opencv2/ocl/: ocl.hpp
samples/android/: CMakeLists.txt
samples/android/VideoWriter/: .project  AndroidManifest.xml
samples/android/VideoWriter/jni/: Android.mk  camerawriter_jni.cpp
samples/android/VideoWriter/res/layout/: activity_camera_writer.xml
samples/android/VideoWriter/res/menu/: activity_camera_writer.xml
samples/android/VideoWriter/res/values/: strings.xml
samples/android/VideoWriter/src/org/opencv/sample/videowriter/: SampleCvViewBase.java  VideoWriter.java  VideoWriterActivity.java
samples/android/tutorial-4-videoio/: .project  AndroidManifest.xml  CMakeLists.txt
samples/android/tutorial-4-videoio/jni/: Android.mk  jni_part.cpp
samples/android/tutorial-4-videoio/res/layout/: tutorial4_surface_view.xml
samples/android/tutorial-4-videoio/res/values/: strings.xml
samples/android/tutorial-4-videoio/src/org/opencv/samples/tutorial4/: Tutorial4Activity.java  VideoWriter.java
samples/android/video-writer/src/org/opencv/sample/videowriter/: SampleCvViewBase.java  VideoWriter.java  VideoWriterActivity.java
samples/cpp/: laplace.cpp  starter_video.cpp
samples/winrt/ImageManipulations/C++/: AdvancedCapture.xaml.cpp  MediaCapture.vcxproj
samples/winrt/ImageManipulations/C++/MediaExtensions/Grayscale/: Grayscale.cpp  Grayscale.h
